--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.1",
+    "helmet": "^3.23.3",
     "socket.io": "^2.3.0"
   },
   "devDependencies": {
